--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -9,11 +9,18 @@
 }
 .row {
   display: flex;
-  justify-content: center;
   height: calc(100vh / 6);
 }
 
 .row div {
+  position: relative;
   border: 1px solid black;
   width: calc(100% / 6);
+}
+
+.row div p {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%,-50%);
 }
