classi per colori

--- a/bonus/assets/css/style.css
+++ b/bonus/assets/css/style.css
@@ -24,3 +24,11 @@
   left: 50%;
   transform: translate(-50%,-50%);
 }
+
+.yellow {
+  background-color: yellow;
+}
+
+.green {
+  background-color: green;
+}
